# paintlet

./: .gitignore  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/workflows/: ci.yml  pages.yml
docs/: RELEASING.md
scripts/: release.sh
site/: index.html  styles.css
src/: App.tsx  actions.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CanvasStage.tsx  ColorControls.tsx  ColorPicker.tsx  Icon.tsx  Logo.tsx  StatusBar.tsx  TextOptions.tsx  TitleBar.tsx  ToolButton.tsx  Toolbar.tsx
src/components/dialogs/: AboutDialog.tsx  ResizeDialog.tsx  SaveDialog.tsx  SettingsDialog.tsx
src/engine/: CanvasEngine.ts  History.test.ts  History.ts  color.test.ts  color.ts  colorHsv.test.ts  coords.ts  floodFill.test.ts  floodFill.ts  raster.ts  selectionHandles.test.ts  selectionHandles.ts  types.ts
src/io/: clipboard.ts  fileIO.ts
src/lib/: cursors.ts  cx.ts  palette.ts  zoom.test.ts  zoom.ts
src/menu/: appMenu.ts
src/state/: stageHooks.ts  store.ts  viewport.ts
src/styles/: index.css
src/tools/: BrushTool.ts  CurveTool.ts  EllipseTool.ts  EraserTool.ts  EyedropperTool.ts  FillTool.ts  FreehandTool.ts  LassoTool.ts  LineTool.ts  PencilTool.ts  PolygonTool.ts  RectangleTool.ts  RoundedRectangleTool.ts  SelectTool.ts  Tool.ts  registry.ts  shapes.test.ts  shapes.ts
tests/: e2e.mjs
